# fixedphilip

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  start.sh
include/: command.h  git.h  log.h
include/fixedphilip/: build.h  command.h  discord.h  file.h  git.h  log.h  math.h  node.h  version.h
include/fixedphilip/utils/: discord.h  file.h  named_node.h  node.h  stopwatch.h  string.h  string_literal.h  time.h
slopgpt_wsl_helper_scripts/: 00_awww_shit_here_we_go_again.sh  01_custom_prefix.sh  02_get_zlib.sh  03_make_zlib.sh  04_get_openssl.sh  05_make_openssl.sh  06_get_opus.sh  07_make_opus.sh  08_cleanup.sh  09_ship_it.sh  send_fixedphilip.sh
src/: build.cpp  command.cpp  command.h  discord.cpp  file.cpp  git.h  log.cpp  main.cpp  math.cpp  version.cpp
src/commands/: calclulate.cpp  calculate.cpp  convert.cpp  convert.cpp.bak  ping.cpp  shutdown.cpp  status.cpp  test.cpp
src/tinyexpr/: tinyexpr.c
src/utils/: stopwatch.h
